--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(235, 235, 235);
 }
-
+/*Menu navegação*/
 aside {
     position:fixed;
     top:0;
@@ -28,7 +28,6 @@ aside {
     overflow-y:auto;
     transition: all ease .5s;
 }
-
 
 .adiciona{
     background-color: rgb(0, 255, 85);
@@ -55,6 +54,7 @@ aside {
 .limpa:hover{
     background-color: rgb(216, 34, 34);
 }
+/*Tabela*/
 
 h2{
     text-align: center;
@@ -67,4 +67,61 @@ table {
     border-collapse: collapse;
 }
 
+/*Modal*/
+
+#wrapper-modal{
+    display: none;
+    margin-left: auto;
+    margin-right: auto;
+    width: 320px;
+    height: 250px;
+    background-color: blue;
+    float: left;
+    border-radius: 10px;
+    border: 2px solid black;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: animate;
+    animation-duration: 800ms;
+}
+
+@keyframes animate {
+    from{opacity: 2;}
+    from{opacity: 0;}
+}
+
+#modal{
+    text-align: center;
+}
+
+#receita{
+    border-radius: 10px;
+    font-size: 17px;
+    width: 200px;
+    height: 30px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+
+#valor{
+    border-radius: 10px;
+    font-size: 17px;
+    width: 200px;
+    height: 30px;
+    margin-bottom: 20px;
+}
+
+#submit{
+    width: 150px;
+    height: 30px;
+    border-radius: 10px;
+    background-color: rgb(0, 255, 0);
+}
+
+#fechaModal{
+    margin-top: 10px;
+    cursor: pointer;
+}
 
