--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,10 @@ table {
     height: 30px;
     border-radius: 10px;
     background-color: rgb(0, 255, 0);
+    cursor: pointer;
+}
+#submit:hover{
+    background-color: rgb(19, 230, 19);
 }
 
 #fechaModal{
